--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1158,7 +1158,7 @@ main {
   position: fixed;
   top: 0;
   right: -100%; /* Start off-screen */
-  width: 90%;
+  width: 100%;
   height: 100%; /* Full viewport height */
   background: rgba(255, 255, 255, 0.9);
   display: flex;
@@ -1190,7 +1190,7 @@ main {
   #modal{
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 100% !important;
     overflow: hidden;
   }
   .modal-text{
@@ -1223,7 +1223,7 @@ main {
   #modal{
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 100% !important;
     overflow: hidden;
   }
   .modal-body {
