fix: primary color set to logo color

--- a/landing/assets/css/style.css
+++ b/landing/assets/css/style.css
@@ -33,7 +33,7 @@ li{
 
 
 a {
-  color: #eb5d1e;
+  color: #e52f00;
   text-decoration: none;
 }
 
@@ -62,7 +62,7 @@ h6,
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: #eb5d1e;
+  background: #e52f00;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -196,13 +196,13 @@ h6,
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #eb5d1e;
+  color: #e52f00;
   
 }
 
 .navbar .getstarted,
 .navbar .getstarted:focus {
-  background: #eb5d1e;
+  background: #e52f00;
   color: #fff;
   padding: 10px 25px;
   margin-left: 30px;
@@ -213,7 +213,7 @@ h6,
 .navbar .getstarted:focus:hover {
   color: #111;
   background: #fff;
-  border: #eb5d1e 2px solid;
+  border: #e52f00 2px solid;
 }
 
 .navbar .dropdown ul {
@@ -248,7 +248,7 @@ h6,
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  background-color: #eb5d1e;
+  background-color: #e52f00;
   color: white;
 }
 
@@ -351,7 +351,7 @@ h6,
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #eb5d1e;
+  color: #e52f00;
 }
 
 .navbar-mobile .getstarted,
@@ -386,7 +386,7 @@ h6,
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #eb5d1e;
+  color: #e52f00;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -452,7 +452,7 @@ h6,
   transition: 0.5s;
   margin-top: 30px;
   color: #fff;
-  background: #eb5d1e;
+  background: #e52f00;
 }
 
 #hero .btn-get-started:hover {
@@ -572,7 +572,7 @@ section {
   display: block;
   width: 60px;
   height: 2px;
-  background: #eb5d1e;
+  background: #e52f00;
   bottom: 0;
   left: calc(50% - 30px);
 }
@@ -755,7 +755,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #eb5d1e;
+  color: #e52f00;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -800,7 +800,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a {
-  color: #eb5d1e;
+  color: #e52f00;
   margin: 0 4px;
   line-height: 0;
   background-color: #fff;
@@ -820,7 +820,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  background: #eb5d1e;
+  background: #e52f00;
   color: #fff;
 }
 
@@ -882,11 +882,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #eb5d1e;
+  border: 1px solid #e52f00;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #eb5d1e;
+  background-color: #e52f00;
 }
 
 .portfolio-details .portfolio-info {
@@ -947,7 +947,7 @@ section {
 .faq .faq-list .question {
   display: block;
   position: relative;
-  font-family: #eb5d1e;
+  font-family: #e52f00;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
@@ -979,7 +979,7 @@ section {
 }
 
 .faq .faq-list .collapsed:hover {
-  color: #eb5d1e;
+  color: #e52f00;
 }
 
 .faq .faq-list .collapsed .icon-show {
@@ -1059,7 +1059,7 @@ section {
 }
 
 .team .member .social a:hover {
-  color: #eb5d1e;
+  color: #e52f00;
 }
 
 .team .member .social i {
@@ -1105,11 +1105,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #eb5d1e;
+  border: 1px solid #e52f00;
 }
 
 .clients .clients-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #eb5d1e;
+  background-color: #e52f00;
 }
 
 /*--------------------------------------------------------------
@@ -1121,8 +1121,8 @@ section {
 }
 
 .contact .info {
-  border-top: 3px solid #eb5d1e;
-  border-bottom: 3px solid #eb5d1e;
+  border-top: 3px solid #e52f00;
+  border-bottom: 3px solid #e52f00;
   padding: 30px;
   background: #fff;
   width: 100%;
@@ -1131,7 +1131,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #eb5d1e;
+  color: #e52f00;
   float: left;
   width: 44px;
   height: 44px;
@@ -1181,21 +1181,21 @@ section {
 }
 
 .contact .info .social-links a:hover {
-  background: #eb5d1e;
+  background: #e52f00;
   color: #fff;
 }
 
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #eb5d1e;
+  background: #e52f00;
   color: #fff;
 }
 
 .contact .php {
   width: 100%;
-  border-top: 3px solid #eb5d1e;
-  border-bottom: 3px solid #eb5d1e;
+  border-top: 3px solid #e52f00;
+  border-bottom: 3px solid #e52f00;
   padding: 30px;
   background: #fff;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
@@ -1269,7 +1269,7 @@ section {
 }
 
 .contact .php button[type=submit] {
-  background: #eb5d1e;
+  background: #e52f00;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1364,7 +1364,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #eb5d1e;
+  background: #e52f00;
   color: #fff;
   transition: 0.3s;
   border-radius: 4px;
@@ -1445,13 +1445,13 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #eb5d1e;
+  color: #e52f00;
 }
 
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #eb5d1e;
+  background: #e52f00;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1482,7 +1482,7 @@ section {
 }
 
 #footer .credits a {
-  color: #eb5d1e;
+  color: #e52f00;
 }
 
 @media (max-width: 575px) {
@@ -1504,7 +1504,7 @@ section {
 
 .projects {
   padding: 0;
-  background-color: #eb5d1e;
+  background-color: #e52f00;
   color: #fff;
   width: 70%;
 }
@@ -1586,7 +1586,7 @@ font-size: 14px;
    }
 
    .projects1 i {
-    color: #eb5d1e;    
+    color: #e52f00;    
    }
   
    .projects1 ul li{
@@ -1702,7 +1702,7 @@ font-size: 14px;
    }
 
    .projects3 i {
-    color: #eb5d1e;    
+    color: #e52f00;    
    }
   
    .projects3 ul li{
@@ -1750,7 +1750,7 @@ font-size: 14px;
 }
 
 .getstarted:hover {
-  border: #eb5d1e 2px solid;
+  border: #e52f00 2px solid;
 
 }
 
@@ -1818,7 +1818,7 @@ font-size: 14px;
 }
 
 .getstarted{
-  background-color: #eb5d1e;
+  background-color: #e52f00;
   color: #fff;
 }
 
@@ -1828,11 +1828,11 @@ font-size: 14px;
 
 .getstarted:hover{
   background-color: #fff;
-  color: #eb5d1e;
+  color: #e52f00;
 }
 
 .getstarted a:hover{
-  color: #eb5d1e;
+  color: #e52f00;
 }
 
 #hedo {
@@ -1869,7 +1869,7 @@ font-size: 14px;
   transition: 0.5s;
   margin-top: 30px;
   color: #fff;
-  background: #eb5d1e;
+  background: #e52f00;
 }
 
 #hedo .btn-get-started:hover {
