--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2344,3 +2344,181 @@ main {
   right: 15px;
   border-color: #e52f00;
 }
+
+
+.process {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+@media (max-width: 767.98) {
+  .process {
+    padding: 30px 0 30px 0;
+  }
+}
+
+.process__intro {
+  margin-bottom: 80px;
+}
+@media (max-width: 991.98px) {
+  .process__intro {
+    margin-bottom: 32px;
+  }
+}
+
+.process__title {
+  flex-shrink: 0;
+}
+
+.process__text {
+  max-width: 18.25rem;
+}
+
+.accordions__list {
+  display: flex;
+  flex-direction: column;
+  gap: 1.8rem;
+}
+@media (max-width: 479.98px) {
+  .accordions__list {
+    gap: 1.25rem;
+  }
+}
+
+.accordions__item {
+  background-color: #f3f3f3;
+  border-radius: 2.8rem;
+  overflow: hidden;
+  transition: 0.5s cubic-bezier(0.65, 0.2, 0.65, 1);
+  box-shadow: 0px 0.3125rem 0px 0px #191a23;
+  border: 0.0625rem solid #191a23;
+    @media (max-width:479.98px){
+        border-radius: 1.5rem;
+    }
+}
+
+.accordions__control {
+  display: flex;
+  align-items: center;
+  padding: 15px 15px;
+  width: 100%;
+  position: relative;
+}
+@media (max-width: 767.98px) {
+  .accordions__control {
+    padding: 30px;
+  }
+}
+@media (max-width: 479.98px) {
+  .accordions__control {
+    padding: 20px;
+  }
+}
+
+.accordions__number {
+  font-size: 2vw;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-right: 1vw;
+  font-weight: 250px;
+  color: #e52f00;
+  @media (max-width: 767.98px) {
+    font-size: 5vw;
+    padding-right: 3vw;
+  }
+    
+  }
+
+.accordions__title {
+  font-family: Space Grotesk;
+  font-size: 2vw;
+  font-weight: 500;
+  color: #e52f00;
+  text-transform: capitalize;
+  flex: 1 1 auto;
+  display: flex;
+  line-height: 120%;
+  padding-right: 1.25rem;
+  justify-content: flex-start;
+  text-align: left;
+  @media (max-width: 767.98px) {
+    font-size: 5vw;
+  }
+
+}
+
+.accordions__icon {
+  flex: 0 0 58px;
+  display: flex;
+  width: 58px;
+  height: 58px;
+  background-color: #e52f00;
+  border: 1px solid whitesmoke;
+  border-radius: 50%;
+  position: relative;
+  transition: 0.5s cubic-bezier(0.65, 0.2, 0.65, 1);
+  @media (max-width: 479.98px) {
+    flex: 0 0 32px;
+    display: flex;
+    width: 32px;
+    height: 32px;
+  }
+}
+.accordions__icon::before {
+  content: "";
+  width: 1.5625rem;
+  height: 0.3125rem;
+  background-color: honeydew;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  @media (max-width: 479.98px) {
+    width: 15px;
+    height: 2px;
+  }
+}
+
+.accordions__icon::after {
+  content: "";
+  width: 1.5625rem;
+  height: 0.3125rem;
+  background-color: honeydew;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(90deg);
+  @media (max-width: 479.98px) {
+    width: 15px;
+    height: 2px;
+  }
+}
+
+.accordions__content {
+  padding: 0 60px 0 60px;
+  max-height: 0;
+  overflow: hidden;
+  will-change: max-height;
+  transition: 0.5s cubic-bezier(0.65, 0.2, 0.65, 1);
+  box-sizing: content-box;
+  position: relative;
+  z-index: 5;
+  @media (max-width: 767.98px) {
+    padding: 0 30px 0 30px;
+  }
+  @media (max-width: 479.98px) {
+    padding: 0 20px 0 20px;
+  }
+}
+
+.open .accordions__content {
+  padding: 10px 3vw 0 3vw;
+  background-color: #e52f00;
+  color: honeydew;
+}
+
+.open {
+  background-color: #b9ff66;
+}
+
+.open .accordions__icon {
+  transform: rotate(225deg);
+}
